# local-chat-memory

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RELEASE_AUDIT_2026-06-15_v0.1.0.md  RELEASE_AUDIT_2026-06-15_v0.1.1.md  RELEASE_AUDIT_2026-06-15_v0.1.2.md  SECURITY.md  SECURITY_AUDIT_2026-06-15.md  config.example.json  line_history_poc.py  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
docs/: PROMOTE_WORKFLOW.md  PUBLISHING.md  TESTPYPI.md
examples/: promote-review-reviewed.md
fixtures/: sample_chat_export_dash.txt  sample_chat_export_whatsapp_us.txt  sample_line_export_bracketed.txt  sample_line_export_iso_tabs.txt  sample_line_export_ja.txt  sample_line_export_overlap.txt  sample_line_export_space_sender.txt
local_chat_memory/: __init__.py  __main__.py  cli.py  schema.sql
scripts/: audit-dist.py  export-current-line-chat.py  line-history-heartbeat.sh  scan-line-downloads.sh
tests/: test_line_history_poc.py
