[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "local-chat-memory"
version = "0.1.2"
description = "Local-first chat export importer for SQLite-backed AI memory workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Local Chat Memory maintainers" }
]
keywords = ["chat-history", "line", "sqlite", "local-first", "ai-memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Communications :: Chat",
  "Topic :: Database",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/cyakkunnlove/local-chat-memory"
Issues = "https://github.com/cyakkunnlove/local-chat-memory/issues"

[project.scripts]
local-chat-memory = "local_chat_memory.cli:main"

[tool.setuptools]
py-modules = ["line_history_poc"]
packages = ["local_chat_memory"]
include-package-data = true

[tool.setuptools.package-data]
local_chat_memory = ["schema.sql"]
